Beta: fix About photo on mobile with object-fit cover, position bottom

--- a/beta/beta.css
+++ b/beta/beta.css
@@ -213,6 +213,14 @@
     }
 
     #about .img-holder {
-        display: none;
+        height: 420px;
+        overflow: hidden;
+    }
+
+    #about .img-holder img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center bottom;
     }
 }
